# blender

./: .gitignore
source/blender/blenfont/: CMakeLists.txt
source/blender/blenfont/intern/: blf_font.c
source/blender/sequencer/intern/: effects.c
